changed background and made it more functional

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h4></h4>
       </div>
   
-      <div id = "display">
+      <div>
         <div id="input-parent">
           <input class="center" id="player-input" maxlength='3' autofocus=autofocus></input>
           <button id="submit">Go!</button>
