there's something going on with the 'you have already guessed this number' aspect

--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8">
     <title>Guessing Game</title>
     <link rel="stylesheet" href="main.css">
     <!-- the MAIN.CSS file is linked here -->
   </head>
-
-  <body>
+  <body id = "body">
     <div id="app">
-
       <div class="center">
         <h1>Play the Guessing Game!</h1>
         <h3 id="subtitle">Guess a number between 1-100!</h3>
       </div>
-  
       <div id='guess-feedback' class='center'>
         <h4></h4>
       </div>
-  
+
       <div>
         <div id="input-parent">
           <input class="center" id="player-input" maxlength='3' autofocus=autofocus></input>
           <button id="submit">Go!</button>
+          <button id="reset">Reset</button>
+          <button id="hint">Hint</button>
         </div>
   
         <div class="center">
@@ -38,9 +36,7 @@
   
       </div>
     </div>
-  
-  
-  
+    
     <div id="footer" class="center">
       <div>
         <h4>Project by Dean Gladish</h4>
